Add gradle task to compile modules.